resolved page width & alignment issues. Added pages for data projects

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -26,22 +26,22 @@ li {
       display: inline;
 }
 
-  li a {
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover {
-    background-color:rgb(255, 165, 0);
-    border-radius: 15px;
-  }
+li a {
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color:rgb(255, 165, 0);
+  border-radius: 15px;
+}
 
 .section {
   /*settings so divs will take up full screen*/
   min-height: 100vh;
-  width: 100vw;
+  /* width: 100%; */
   padding: 50px
 }
 h1{
@@ -70,9 +70,6 @@ p {
 .headings {
   font-size: 45px;
 }
-span {
-  text-decoration-color: rgb(255, 165, 0)
-}
 
 #one {
   /*background-color: lightblue;*/
@@ -81,15 +78,9 @@ span {
 }
 #two {
   /*background-color: yellow;*/
-  display: grid;
-  grid-template-rows: 20% 80%;
-  grid-template-columns: 50% 50%;
-  grid-column-gap: 50px;
-  grid-template-areas:
-    "hello hello"
-    "bio picture";
 }
-#hello {grid-area: hello;
+
+#hello {
   color: rgb(178, 18, 67);
 }
 
@@ -101,9 +92,10 @@ img {
   border-radius: 20%;
   width: 400px;
   height: auto;
-  opacity: 1.0;
-  filter: alpha(opacity=100); /* For IE8 and earlier */
-  filter: saturate(1);
+}
+#my-img {
+  margin-left: 80px;
+  float: right;
 }
 #projects {
   color: rgb(255, 165, 0);
@@ -145,30 +137,32 @@ img {
   margin: 20px;
   border-radius: 25px;
   padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
-  h3 {
-    text-align: center;
-    font-size: 25px;
-  }
+h3 {
+  text-align: center;
+  font-size: 25px;
+}
 #description {
   text-align: center;
   padding-top: 80px;
 }
-  #thumbnail-one {
-    width: 200px;
-    height: 100px;
-    background: gray;
-    margin: auto;
-    display: block;
-  }
-  
-    #thumbnail-two {
-    width: 200px;
-    height: 100px;
-    background: gray;
-    margin: auto; 
-    display: block;
-  }
+#thumbnail-one {
+  width: 200px;
+  height: 100px;
+  background: gray;
+  margin: auto;
+  display: block;
+}
+
+#thumbnail-two {
+  width: 200px;
+  height: 100px;
+  background: gray;
+  margin: auto; 
+  display: block;
+}
 #contact {
     color: rgb(178, 18, 67);
 }
@@ -178,13 +172,10 @@ img {
   flex-direction: row;
   justify-content: space-between;
   margin: 100px 10px;
-    margin-top: 100px;
-    margin-right: 10px;
-    margin-bottom: 100px;
-    margin-left: 10px;
   text-align: center;
   flex-wrap: wrap;
 }
+
 #twitter {
   color: rgb(0, 128, 128);
 }
